# C214-lab-project

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pipeline.yml
c214_lab_project/application/database/db_mgt/: base.py  postgresql.py
c214_lab_project/application/database/models/: base_model.py  file.py  file_db.py  shared_link.py  shared_link_db.py  user.py  user_db.py
c214_lab_project/application/database/models/migrations/: 0001_start.py
c214_lab_project/application/database/repositories/: cloudflare_r2_repository.py  peewee_file_repository.py  peewee_shared_link_repository.py  peewee_user_repository.py
c214_lab_project/application/ui/: application.py  main.py
c214_lab_project/application/ui/actions/: home_actions.py
c214_lab_project/application/ui/screens/: __init__.py  base.py  home.py  sign_in.py
c214_lab_project/core/enums/: shared_link_permissions.py
c214_lab_project/core/exceptions/: file_exceptions.py  shared_link_exceptions.py  user_exceptions.py
c214_lab_project/domain/entities/: file.py  shared_link.py  user.py
c214_lab_project/domain/entities/base/: entity.py
c214_lab_project/domain/mappers/: file_mapper.py  shared_link_mapper.py  user_mapper.py
c214_lab_project/domain/repositories/: file_repository.py  r2_repository.py  shared_link_repository.py  user_repository.py
c214_lab_project/domain/use_cases/: __init__.py
c214_lab_project/domain/use_cases/file/: download_file_use_case.py  upload_file_use_case.py
c214_lab_project/domain/use_cases/shared_link/: create_shared_link_use_case.py
c214_lab_project/domain/use_cases/user/: create_user_use_case.py  login_user_use_case.py
tests/: common.py
tests/domain/file/: test_download_file.py  test_upload_a_file.py
tests/domain/shared_link/: test_create_shared_link_use_case.py
tests/domain/user/: test_create_user_use_case.py  test_login_user_use_case.py
tests/factories/: make_file.py  make_shared_link.py  make_user.py
tests/in_memory_repository/: in_memory_file_repository.py  in_memory_r2_repository.py  in_memory_shared_link_repository.py  in_memory_user_repository.py
tests/utils/: convert_uuid_into_str.py
