[tool.poetry]
name = "c214-lab-project"
version = "0.1.0"
description = ""
authors = [
  "Marcos Henrique Barbosa Pereira <marcoshbp71@gmail.com>",
  "Pedro Augusto Barbosa Aparecido <pedr.augustobarbosa.aparecido@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
peewee = "^3.17.8"
result = "^0.17.0"
sv-ttk = "^2.6.0"
typer = "^0.14.0"
boto3 = "^1.35.71"
tqdm = "^4.67.1"
psycopg2 = "^2.9.10"


[tool.black]
line-length = 80
target-version = ["py312"]
exclude = '''
/(
  \.git
 | \.hg
 | \.mypy_cache
 | \.tox
 | venv
 | _build
 | buck-out
 | build
 | \.flake8
 )/
'''

[tool.isort]
profile = "black"
line_length = 80

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-html = "^4.1.1"
black = "^24.10.0"
isort = "^5.13.2"
faker = "^33.1.0"
taskipy = "^1.14.1"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"

[tool.taskipy.tasks]
lint = "black --check --diff . && isort --check --diff ."
lint-fix = "echo \"Formmating with black\" && black . && echo \"Formmating with isort\" && isort ."
test = "pytest -s -x -vv"
pre_test = "task lint"
post_test = "coverage html"
run = "python c214_lab_project/application/ui/main.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
